--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,7 @@
         确保xls文件里包含一个名为'源编码'的sheet, 并把所有课堂分类数据写在这个sheet 中。
         </li>
         <li>
-        点击下面的按钮，提交文件，并点击上传。
+        点击下面的按钮，提交xls文件。
         </li>
     </ol>
 
