--- a/templates/home.html
+++ b/templates/home.html
@@ -58,7 +58,7 @@
     </h4>
     <ol>
         <li>
-        确保xls文件里包含一个名为'源编码'的sheet, 并把所有课堂分类数据写在这个sheet 中。
+        确保xls文件里包含一个名为'原编码'的sheet, 并把所有课堂分类数据写在这个sheet 中。
         </li>
         <li>
         点击下面的按钮，提交xls文件。
